// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadButton Default DownloadButton renders as expected 1`] = `
<a
  aria-label="primary"
  className="unprose btn btn--blue round-full py12 px24 txt-s my18"
  download="airports.csv"
  href="../files/airports.csv"
>
  <span
    className="flex flex--center-cross"
  >
    <span
      className="mr6"
    >
      <svg
        aria-hidden="true"
        className="events-none icon"
        data-testid="icon-arrow-down"
        focusable="false"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-arrow-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        style={
          Object {
            "border": 0,
            "clip": "rect(0, 0, 0, 0)",
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
            "wordWrap": "normal",
          }
        }
      >
        arrow-down
      </span>
    </span>
    Download CSV
  </span>
</a>
`;

exports[`DownloadButton DownloadButton for PNG renders as expected 1`] = `
<a
  aria-label="primary"
  className="unprose btn btn--blue round-full py12 px24 txt-s my18"
  download="shop-15.png"
  href="../files/shop-15.png"
>
  <span
    className="flex flex--center-cross"
  >
    <span
      className="mr6"
    >
      <svg
        aria-hidden="true"
        className="events-none icon"
        data-testid="icon-arrow-down"
        focusable="false"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-arrow-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        style={
          Object {
            "border": 0,
            "clip": "rect(0, 0, 0, 0)",
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
            "wordWrap": "normal",
          }
        }
      >
        arrow-down
      </span>
    </span>
    Download PNG
  </span>
</a>
`;

exports[`DownloadButton DownloadButton with optional text renders as expected 1`] = `
<a
  aria-label="primary"
  className="unprose btn btn--blue round-full py12 px24 txt-s my18"
  download="test-gzip.csv.gz"
  href="../files/test-gzip.csv.gz"
>
  <span
    className="flex flex--center-cross"
  >
    <span
      className="mr6"
    >
      <svg
        aria-hidden="true"
        className="events-none icon"
        data-testid="icon-arrow-down"
        focusable="false"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-arrow-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        style={
          Object {
            "border": 0,
            "clip": "rect(0, 0, 0, 0)",
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
            "wordWrap": "normal",
          }
        }
      >
        arrow-down
      </span>
    </span>
    Download for iOS
  </span>
</a>
`;

exports[`DownloadButton DownloadButton with prose class renders as expected 1`] = `
<div
  className="prose"
>
  <a
    aria-label="primary"
    className="unprose btn btn--blue round-full py12 px24 txt-s my18"
    download="shop-15.png"
    href="../files/shop-15.png"
  >
    <span
      className="flex flex--center-cross"
    >
      <span
        className="mr6"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-arrow-down"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-arrow-down"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          arrow-down
        </span>
      </span>
      Download PNG
    </span>
  </a>
</div>
`;
